--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "bootstrap-sass": "3.3.7",
         "axios": "^0.17",
         "popper.js": "^1.12",
         "cross-env": "^5.1",
@@ -17,8 +18,5 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
-    },
-    "dependencies": {
-        "bootstrap-sass": "^3.3.7"
     }
 }
